test spacing fix

--- a/src/containers/AboutMe/AboutMe.module.scss
+++ b/src/containers/AboutMe/AboutMe.module.scss
@@ -29,6 +29,7 @@
 
   .AboutMeCopy {
     color: $grey;
+    font-size: 16px;
     margin-top: 45px;
     padding: 0px 35px;
 
